k8s_work/nginx_ingress/03_frontend_nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: frontend-nginx-service
  namespace: scv
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend-nginx
  type: ClusterIP
